--- a/testmvc/App_LocalResources/Strings.resx
+++ b/testmvc/App_LocalResources/Strings.resx
@@ -177,4 +177,7 @@
   <data name="Save" xml:space="preserve">
     <value>Сохранить</value>
   </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Отмена</value>
+  </data>
 </root>
